fix: fix spacing for Proposed Operating Standards list

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -678,7 +678,7 @@ header {
     margin-bottom: 1.5rem;
 }
 
-.blog_post p:last-child {
+.blog_post p:last-child:not(li p) {
     margin-bottom: 0;
 }
 
